RESOLVED FIXED309990
[iOS] Captions do not render when using AVExperienceController
https://bugs.webkit.org/show_bug.cgi?id=309990
Summary [iOS] Captions do not render when using AVExperienceController
Andy Estes
Reported 2026-03-15 14:16:19 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-15 14:16:26 PDT
Andy Estes
Comment 2 2026-03-15 14:19:21 PDT
EWS
Comment 3 2026-03-15 21:00:42 PDT
Committed 309302@main (e1896d3e35f0): <https://commits.webkit.org/309302@main> Reviewed commits have been landed. Closing PR #60667 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.