[iOS] Captions do not render when using AVExperienceController https://bugs.webkit.org/show_bug.cgi?id=309990 rdar://172617203

Reviewed by Eric Carlson.

Added a captionLayer to WKAVContentSource and populated it with VideoPresentationInterface's
captionsLayer. Two additional drive-by fixes:
- Made AVExperienceControllerFullscreenEnabled overridable by user defaults.
- Implemented did(Begin|End)Scrubbing callbacks in WKSExperienceController.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Platform/ios/PlaybackSessionInterfaceAVKit.mm:
(WebKit::PlaybackSessionInterfaceAVKit::startObservingNowPlayingMetadata):
(WebKit::PlaybackSessionInterfaceAVKit::stopObservingNowPlayingMetadata):
* Source/WebKit/Platform/ios/VideoPresentationInterfaceAVKit.h:
* Source/WebKit/Platform/ios/VideoPresentationInterfaceAVKit.mm:
(-[WKExperienceControllerDelegate initWithParent:]):
(-[WKExperienceControllerDelegate experienceControllerDidExitFullscreen:]):
(-[WKExperienceControllerDelegate experienceControllerDidBeginScrubbing:]):
(-[WKExperienceControllerDelegate experienceControllerDidEndScrubbing:]):
(-[WKExperienceControllerDelegate experienceController:didToggleCaptionStylePreviewID:]):
(WebKit::VideoPresentationInterfaceAVKit::didToggleCaptionStylePreviewID):
(WebKit::VideoPresentationInterfaceAVKit::setupPlayerViewController):
(WebKit::VideoPresentationInterfaceAVKit::setupCaptionsLayer):
(-[WKExperienceControllerDelegate initWithModel:]): Deleted.
* Source/WebKit/Platform/ios/WKAVContentSource.h:
* Source/WebKit/Platform/ios/WKAVContentSource.mm:
(-[WKAVContentSource setCaptionLayer:]):
(-[WKAVContentSource captionLayer]):
* Source/WebKit/WebKitSwift/AVKit/WKSExperienceController.h:

Canonical link: https://commits.webkit.org/309302@main